# atropos

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONFIG.md  CONTRIBUTING.md  README.md  SLURM.md  llm.txt  llms.txt  pyproject.toml
.github/: environment_pull_request_template.md  non_environment_pull_request_template.md  pull_request_template.md
.github/workflows/: upload_to_pypi.yml
atroposlib/: type_definitions.py
atroposlib/api/: server.py  utils.py
atroposlib/cli/: dpo.py  inference_node_wandb_watcher.py  run_api.py  sft.py  view_run.py
atroposlib/envs/: README.md  base.py
atroposlib/envs/reward_fns/: cosine_scaled_reward.py
atroposlib/envs/server_handling/: openai_server.py  server_baseline.py  (+2 more)
atroposlib/tests/: test_advantages.py  test_openai_api_workarounds.py
atroposlib/utils/: __init__.py  advantages.py  best_of_n_selection.py  cli.py  config_handler.py  message_history_utils.py  tokenize_for_trainer.py  tool_call_parser.py
environments/: README.md  SCREEN_CAPTURE_USAGE.md  fundamental_prediction_environment.py  gsm8k_server.py  gym_taxi.py  math_server.py  math_server_zero.py  mcqa_thinking_env.py  rlaif_server.py  screen_capture_env.py  tool_calling_server.py
environments/code_execution_server/: coding_server.py  server.py
environments/dataset_environment/: LOCAL_TESTING.md  dataset_env.py  dataset_local_server.py  launch_local_dataset_run.py
environments/multimodal_dpo/: clevr_cogen_a_train.py  clevr_complex.py  ocr_vqa.py  pixmo_clocks.py  pixmo_count.py  pixmo_point_explanations.py
example_trainer/: README.md  grpo.py
(+13 files in other folders)
